--- a/themes/hugo-tempo-theme/layouts/index.html
+++ b/themes/hugo-tempo-theme/layouts/index.html
@@ -114,12 +114,12 @@
             <div class="container text-center">
                 <div class="row">
                     <ul class="list-unstyled">
-                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="assets/images/press/press-1.png" alt=""></a></li>
-                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="assets/images/press/press-2.png" alt=""></a></li>
-                        <li class="col-md-2 col-sm-4 col-xs-6 xs-break"><a href="#"><img class="img-responsive" src="assets/images/press/press-3.png" alt=""></a></li>
-                        <li class="col-md-2 col-sm-4 col-xs-6 sm-break"><a href="#"><img class="img-responsive" src="assets/images/press/press-4.png" alt=""></a></li>
-                        <li class="col-md-2 col-sm-4 col-xs-6 xs-break"><a href="#"><img class="img-responsive" src="assets/images/press/press-5.png" alt=""></a></li>
-                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="assets/images/press/press-6.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-1.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-2.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6 xs-break"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-3.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6 sm-break"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-4.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6 xs-break"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-5.png" alt=""></a></li>
+                        <li class="col-md-2 col-sm-4 col-xs-6"><a href="#"><img class="img-responsive" src="{{ .Site.BaseURL }}images/press/press-6.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                                 <i class="fa fa-quote-right"></i>
                             </div><!--//quote-box-->
                             <div class="people text-center">
-                                <img class="img-rounded user-pic" src="assets/images/people/people-1.png" alt="">
+                                <img class="img-rounded user-pic" src="{{ .Site.BaseURL }}images/people/people-1.png" alt="">
                             </div><!--//people-->
                         </div><!--//item-->
                         <div class="item">
@@ -210,7 +210,7 @@
                                 <i class="fa fa-quote-right"></i>
                             </div><!--//quote-box-->
                             <div class="people text-center">
-                                <img class="img-rounded user-pic" src="assets/images/people/people-2.png" alt="">
+                                <img class="img-rounded user-pic" src="{{ .Site.BaseURL }}images/people/people-2.png" alt="">
                             </div><!--//people-->
                         </div><!--//item-->
                         <div class="item last">
@@ -224,7 +224,7 @@
                                 <i class="fa fa-quote-right"></i>
                             </div><!--//quote-box-->
                             <div class="people text-center">
-                                <img class="img-rounded user-pic" src="assets/images/people/people-3.png" alt="">
+                                <img class="img-rounded user-pic" src="{{ .Site.BaseURL }}images/people/people-3.png" alt="">
                             </div><!--//people-->
                         </div><!--//item-->
                     </div>
@@ -669,23 +669,23 @@
     </div><!--//config-wrapper-->
 
     <!-- Javascript -->
-    <script type="text/javascript" src="assets/plugins/jquery-1.12.3.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-inview/jquery.inview.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/isMobile/isMobile.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
-    <script type="text/javascript" src="assets/plugins/FitVids/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/jquery-1.12.3.min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/bootstrap-hover-dropdown.min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/jquery-inview/jquery.inview.min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/isMobile/isMobile.min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/back-to-top.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/jquery-placeholder/jquery.placeholder.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/FitVids/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}js/main.js"></script>
 
     <!-- Vimeo video API -->
     <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
-    <script type="text/javascript" src="assets/js/vimeo.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}js/vimeo.js"></script>
 
     <!--[if !IE]>-->
-    <script type="text/javascript" src="assets/js/animations.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}js/animations.js"></script>
     <!--<![endif]-->
 </body>
 </html>
