--- a/themes/hugo-tempo-theme/layouts/partials/pricing.html
+++ b/themes/hugo-tempo-theme/layouts/partials/pricing.html
@@ -1,3 +1,4 @@
+<body class="pricing-page">
     <div class="wrapper">
         <!-- ******HEADER****** --> 
         <header id="header" class="header">  
@@ -516,3 +517,4 @@
     <!--[if !IE]>--> 
     <script type="text/javascript" src="assets/js/animations.js"></script> 
     <!--<![endif]-->           
+</body>
