rename header partial to head to properly match the tag

--- a/themes/hugo-tempo-theme/layouts/index.html
+++ b/themes/hugo-tempo-theme/layouts/index.html
@@ -3,7 +3,7 @@
 {{ "<!--[if IE 9]>" | safeHTML }} <html lang="en" class="ie9"> {{ "<![endif]-->" | safeHTML }}
 {{ "<!--[if !IE]><!-->" | safeHTML }} <html lang="en"> {{ "<!--<![endif]-->" | safeHTML }}
 <head>
-  {{ partial "header.html" . }}
+  {{ partial "head.html" . }}
 </head>
   {{ partial "home.html" . }}
 </html>
